<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press-the-app-icon static shortcuts. Each jumps straight to an
     action via the lavatiscanner:// deep link handled in
     src/navigation/RootNavigator.tsx, instead of just opening to Home. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lavatiscanner"
            android:targetClass="com.lavatiscanner.MainActivity"
            android:data="lavatiscanner://scan" />
    </shortcut>
    <shortcut
        android:shortcutId="idcard"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_idcard"
        android:shortcutShortLabel="@string/shortcut_idcard_short"
        android:shortcutLongLabel="@string/shortcut_idcard_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lavatiscanner"
            android:targetClass="com.lavatiscanner.MainActivity"
            android:data="lavatiscanner://idcard" />
    </shortcut>
    <shortcut
        android:shortcutId="import"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_import"
        android:shortcutShortLabel="@string/shortcut_import_short"
        android:shortcutLongLabel="@string/shortcut_import_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lavatiscanner"
            android:targetClass="com.lavatiscanner.MainActivity"
            android:data="lavatiscanner://import" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lavatiscanner"
            android:targetClass="com.lavatiscanner.MainActivity"
            android:data="lavatiscanner://search" />
    </shortcut>
</shortcuts>
